--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -14,16 +14,16 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#">Узнать -></a>
+        <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
-      <div class="header__main-illustration"></div>
-      <div class="header__square-pic"</div>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="картинка заголовка">
+      <div class="header__square-pic"></div>
     </header>
 
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <p class="two-columns__brief">Главные проблемы в обучении</p>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
                Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
@@ -44,7 +44,7 @@
       </section>
         
       <section class="digits">
-        <h3 class="section-title">Цифры и факты</h3>
+        <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
@@ -85,88 +85,97 @@
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <p class="feynman__link"><a href="#">Подробнее -></a></p>
-        <img class="feynman__imgs" src="images/feynman.png" alt="Фейнман">
+        <p class="feynman__link"><a href="#">Подробнее &#8594;</a></p>
+        <img class="feynman__img" src="./images/feynman.png" alt="Фейнман">
       </section>
 
       <section class="kaufman">
-        <h3 class="section-title_theme_dark">Принципы обучения</h3>
-          <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
-          <ul class="table_theme_dark">
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">1</h4>
-              <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">1</p>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">2</h4>
-              <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">2</p>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">3</h4>
-              <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">3</p>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">4</h4>
-              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">4</p>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">5</h4>
-              <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">5</p>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">6</h4>
-              <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">6</p>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">7</h4>
-              <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">7</p>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">8</h4>
-              <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">8</p>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">9</h4>
-              <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">9</p>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h4 class="table__heading_theme_dark">10</h4>
-              <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">10</p>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
-          </ul>
-          <div class="kaufman__triangle"></div>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
 
-      <div class="footer__column_content_copyright">
+      <div class="footer__column footer__column_content_copyright">
         <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип яндекс.практикум">
-        <p class="footer__author">2019 Виктор Абанькин</p>
+        <p class="footer__author">&#169 2019. Виктор Абанькин</p>
       </div>
 
-      <div class="footer__column_content_info">
-        <p class="footer__column-heading">О практикуме</p>
-        <div class="footer__column-links">
-          <p class="footer__column-link">Главная</p>
-          <p class="footer__column-link">Концепция</p>
-          <p class="footer__column-link">Наставники</p>
-        </div>
+      <div class="footer__column footer__column_content_info">
+        <p class="footer__column-heading">О Практикуме</p>
+        <ul class="footer__column-links">
+          <li class="footer__column-link">Главная</li>
+          <li class="footer__column-link">Концепция</li>
+          <li class="footer__column-link">Наставники</li>
+        </ul>
       </div>
      
-      <div class="footer__column_content_social">
+      <div class="footer__column footer__column_content_social">
         <p class="footer__column-heading">Соцсети</p>
-        <div class="footer__column-link">
-        <div class="footer__social-icon" src="" alt="Facebook"></div>
-        <p class="footer__column-link">Facebook</p>
-        <div class="footer__social-icon" src="" alt="ВКонтакте"></div>
-        <p class="footer__column-link">ВКонтакте</p>
-        <div class="footer__social-icon" src="" alt="Instagram"></div>
-        <p class="footer__column-link">Instagram</p>
-        </div>
+        <ul class="footer__column-links">
+          <li class="footer__social-icon">
+            <a href="#" class="footer__column-link">
+              <img src="images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook
+            </a>
+          </li>
+          <li class="footer__social-icon">
+            <a href="#" class="footer__column-link">
+              <img src="images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">Вконтакте
+            </a>
+          </li>
+          <li class="footer__social-icon">
+            <a href="#" class="footer__column-link">
+              <img src="images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram
+            </a>
+          </li>
+        </ul>
       </div>
 
       </div>
