--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
         <ul class="footer__column-links">
           <li class="footer__social-icon">
             <a href="#" class="footer__column-link">
-              <img src="images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook
+              <img src="images/facebook_color_white.svg" alt="Иконка Фэйсбук" class="footer__social-icon">Facebook
             </a>
           </li>
           <li class="footer__social-icon">
             <a href="#" class="footer__column-link">
-              <img src="images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">Вконтакте
+              <img src="images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">Вконтакте
             </a>
           </li>
           <li class="footer__social-icon">
             <a href="#" class="footer__column-link">
-              <img src="images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram
+              <img src="images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">Instagram
             </a>
           </li>
         </ul>
