--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <p class="feynman__link"><a href="#">Подробнее &#8594;</a></p>
-        <img class="feynman__img" src="./images/feynman.png" alt="Фейнман">
+        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <div class="feynman__img"></div>
       </section>
 
       <section class="kaufman">
-        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
@@ -150,32 +150,36 @@
 
       <div class="footer__column footer__column_content_info">
         <p class="footer__column-heading">О Практикуме</p>
+        <nav>
         <ul class="footer__column-links">
-          <li class="footer__column-link">Главная</li>
-          <li class="footer__column-link">Концепция</li>
-          <li class="footer__column-link">Наставники</li>
+          <li><a class="footer__column-link" href="#">Главная</a></li>
+          <li><a class="footer__column-link" href="#">Концепция</a></li>
+          <li><a class="footer__column-link" href="#">Наставники</a></li>
         </ul>
+        </nav>
       </div>
      
       <div class="footer__column footer__column_content_social">
         <p class="footer__column-heading">Соцсети</p>
+        <nav>
         <ul class="footer__column-links">
-          <li class="footer__social-icon">
+          <li>
             <a href="#" class="footer__column-link">
               <img src="images/facebook_color_white.svg" alt="Иконка Фэйсбук" class="footer__social-icon">Facebook
             </a>
           </li>
-          <li class="footer__social-icon">
+          <li>
             <a href="#" class="footer__column-link">
               <img src="images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">Вконтакте
             </a>
           </li>
-          <li class="footer__social-icon">
+          <li>
             <a href="#" class="footer__column-link">
               <img src="images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">Instagram
             </a>
           </li>
         </ul>
+        </nav>
       </div>
 
       </div>
