--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <p class="two-columns__brief">Главные проблемы в обучении</p>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
                Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
@@ -96,43 +96,43 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">1</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">2</p>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">3</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">4</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">5</p>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">6</p>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">7</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">8</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">9</p>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">10</p>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
         </ul>
